<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECE9"
    tools:context=".registrasimurid2">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="111dp"
        android:text="Halo!"
        android:textColor="#68701E"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="203dp"
        android:text="@string/anda_mendaftar_sebagai"
        android:textColor="#323505"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="350dp"
        android:text="@string/murid"
        android:textColor="#323505"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="149dp"
        android:contentDescription="@string/todo20"
        app:srcCompat="@drawable/reading" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="276dp"
        android:text="@string/lengkapi_informasi_anda_sebelum_mendaftar_menjadi_pengguna_teach_me"
        android:textAlignment="center"
        android:textColor="#68701E"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:background="#899231"
        android:onClick="lanjuts"
        android:text="@string/lanjut"
        android:textColor="#EDECE9" />

</RelativeLayout>