<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECE9"
    android:orientation="vertical">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        android:background="#5E7F19"
        android:onClick="PindahMasuk"
        android:text="@string/sign_in"
        android:textColor="#EDECE9"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="123dp"
        android:text="@string/daftar"
        android:textAlignment="center"
        android:textColor="#5E7F19"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="367dp"
        android:text="Anda Akan Mendaftar Sebagai:"
        android:textColor="#5E7F19"
        android:textSize="18sp" />

    <Button
        android:id="@+id/clickguru"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="286dp"
        android:background="#5E7F19"
        android:onClick="DaftarGuru"
        android:text="@string/guru"
        android:textColor="#EDECE9" />

    <Button
        android:id="@+id/clickmurid"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="286dp"
        android:background="#5E7F19"
        android:onClick="DaftarMurid"
        android:text="@string/murid"
        android:textColor="#EDECE9" />

    <EditText
        android:id="@+id/fillEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fillPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="439dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>