<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="191dp"
        android:text="@string/tingkat_kelas"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="241dp"
        android:text="@string/jurusan"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="143dp"
        android:text="@string/tingkat_sekolah"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="87dp"
        android:text="@string/nomor_hp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/masukkan_alamat"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/alamat"
        tools:ignore="LabelFor,RelativeOverlap"
        tools:targetApi="cupcake" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_62"
        tools:ignore="LabelFor,RelativeOverlap"
        tools:targetApi="cupcake" />

    <Button
        android:id="@+id/button"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="193dp"
        android:text="@string/lanjut" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="143dp" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="241dp" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="193dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="303dp"
        android:text="Foto:" />

    <ImageView
        android:id="@+id/imageupload"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="15dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</RelativeLayout>