<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECE9"
    tools:context=".RegistrasiGuru1">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="111dp"
        android:text="Selamat Datang!"
        android:textColor="#68701E"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/anda_mendaftar_sebagai"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="147dp"
        android:contentDescription="@string/todo20"
        app:srcCompat="@drawable/teacher" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="178dp"
        android:text="@string/guru"
        android:textColor="#323505"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="280dp"
        android:text="@string/lengkapi_informasi_anda_sebelum_mendaftar_menjadi_tenaga_ajar_teach_me"
        android:textAlignment="center"
        android:textColor="#68701E"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="201dp"
        android:background="#899231"
        android:onClick="keguru2"
        android:text="@string/lanjut"
        android:textColor="#EDECE9" />

</RelativeLayout>