<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5EEE3"
    tools:context=".halamanawal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/todo19"
        app:srcCompat="@drawable/icons" />

    <Button
        android:id="@+id/button2"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="338dp"
        android:background="#EDECE9"
        android:onClick="ClickMasuk"
        android:text="@string/sign_in"
        android:textColor="#323505" />

    <Button
        android:id="@+id/button6"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="251dp"
        android:background="#EDECE9"
        android:onClick="ClickDaftar"
        android:text="@string/sign_up"
        android:textColor="#323505" />
</RelativeLayout>