<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECE9"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="241dp" />

    <ImageView
        android:id="@+id/imageupload"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="11dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="398dp"
        android:text="Foto:"
        android:textColor="#323505"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="336dp"
        android:text="@string/jurusan"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="335dp"
        android:entries="@array/JurusanTerakhir" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="286dp"
        android:text="@string/tingkat_kelas"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="286dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="238dp"
        android:text="@string/tingkat_sekolah"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_62"
        android:textColor="#323505"
        tools:ignore="LabelFor,RelativeOverlap"
        tools:targetApi="cupcake" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="182dp"
        android:text="@string/nomor_hp"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="125dp"
        android:text="@string/masukkan_alamat"
        android:textAlignment="center"
        android:textColor="#323505"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/alamat1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#98D4AF"
        tools:ignore="LabelFor,RelativeOverlap"
        tools:targetApi="cupcake" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:background="#899231"
        android:onClick="berhasi_murid"
        android:text="@string/lanjut"
        android:textColor="#EDECE9" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="65dp"
        android:text="Nama:"
        android:textColor="#323505"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="Nama"
        android:inputType="textPersonName" />

</RelativeLayout>