<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edece9"
    tools:context=".FilterCariGuru">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:background="#98D4AF">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="18sp"
            android:text="@string/filter"
            android:textAlignment="center"
            android:textColor="#777739"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#323505" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="328dp"
        android:text="@string/tarif"
        android:textColor="#323505"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#323505"
        android:entries="@array/daftar_pelajaran" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#323505"
        android:entries="@array/pilih_tarif" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="267dp"
        android:text="@string/pelajaran"
        android:textColor="#323505"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#323505"
        android:entries="@array/jurusan_sekolah" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="212dp"
        android:text="@string/jurusan"
        android:textColor="#323505"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="157dp"
        android:text="@string/kelas"
        android:textColor="#323505"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="101dp"
        android:text="@string/tingkat_sekolah"
        android:textStyle="bold"
        android:textColor="#323505" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#323505" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="304dp"
        android:background="#899231"
        android:onClick="back"
        android:text="Cari"
        android:textColor="#edece9" />

</RelativeLayout>